--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.4.15",
@@ -17,6 +18,7 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.3.0",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
